แก้ customer controller
